crates/toml_edit/tests/fixtures/invalid/control/bare-vertical-tab.stderr
TOML parse error at line 1, column 21
  |
1 | bare-vertical-tab = 
  |                     ^
Invalid string
Expected `"`, `'`
